samples/_failures_safe/1761218718_ed5e48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df2ae81b.c: In function ‘main’:
./samples/SAFE/__tmp_df2ae81b.c:163:24: error: missing terminating " character
  163 |                 printf("Failed to add log
      |                        ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_df2ae81b.c:163:17: error: expected expression at end of input
  163 |                 printf("Failed to add log
      |                 ^~~~~~
./samples/SAFE/__tmp_df2ae81b.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df2ae81b.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df2ae81b.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df2ae81b.c:163:17: error: expected declaration or statement at end of input
